--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 anyio==3.6.1
 asgiref==3.5.2
+autopep8==1.6.0
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+cryptography==37.0.4
 dnspython==2.2.1
 email-validator==1.2.1
 fastapi==0.79.0
+greenlet==1.1.2
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
@@ -14,14 +18,22 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.7.11
+psycopg2==2.9.3
+pycodestyle==2.9.1
+pycparser==2.21
 pydantic==1.9.1
+PyMySQL==1.0.2
+python-decouple==3.6
 python-dotenv==0.20.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.39
+SQLAlchemy-Utils==0.38.3
 starlette==0.19.1
+toml==0.10.2
 typing_extensions==4.3.0
 ujson==5.4.0
 urllib3==1.26.11
